# ckanext-theme

./: MANIFEST.in  README.md  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/theme/: cli.py  helpers.py  plugin.py  views.py
ckanext/theme/assets/: script.js  webassets.yml
ckanext/theme/assets/css/: global.css  style.css
ckanext/theme/i18n/: ckanext-theme.pot
ckanext/theme/i18n/ar/LC_MESSAGES/: ckanext-theme.mo  ckanext-theme.po
ckanext/theme/i18n/es/LC_MESSAGES/: ckanext-theme.mo  ckanext-theme.po
ckanext/theme/i18n/fr/LC_MESSAGES/: ckanext-theme.mo  ckanext-theme.po
ckanext/theme/i18n/ru/LC_MESSAGES/: ckanext-theme.mo  ckanext-theme.po
ckanext/theme/i18n/zh_Hans_CN/LC_MESSAGES/: ckanext-theme.mo  ckanext-theme.po
ckanext/theme/logic/: action.py  auth.py  schema.py  validators.py
ckanext/theme/public/: global.css  style.css
ckanext/theme/templates/: base.html  footer.html  header.html
ckanext/theme/templates/group/snippets/: helper.html
ckanext/theme/templates/home/: index.html
ckanext/theme/templates/home/snippets/: about_text.html  promoted.html
ckanext/theme/templates/organization/snippets/: helper.html
ckanext/theme/templates/package/: read.html  search.html
ckanext/theme/templates/package/snippets/: additional_info.html  resource_item.html
ckanext/theme/templates/snippets/: package_item.html
ckanext/theme/tests/: test_helpers.py  test_plugin.py  test_views.py
ckanext/theme/tests/logic/: test_action.py  test_auth.py  test_validators.py
